--- a/EscalArt/static/escalArt/css/Perfil.css
+++ b/EscalArt/static/escalArt/css/Perfil.css
@@ -4,9 +4,10 @@ body {
     background-color: #D9DBD2;
 }
 
-#settings-artista {
+
+/* #settings-artista {
     display: none;
-}
+} */
 
 .column {
     float: left;
