--- a/EscalArt/templates/escalArt/publicacion.html
+++ b/EscalArt/templates/escalArt/publicacion.html
@@ -16,10 +16,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-
     <!--Iconos-->
     <script src="https://kit.fontawesome.com/943e4f11a2.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="text/css" rel="stylesheet" href="{% static 'EscalArt/css/publicacion.css' %} ">
 
 </head>
 
@@ -28,7 +28,6 @@
 
     <div class="scrol"></div>
     <script type="text/javascript" src="{% static 'EscalArt/js/menu.js' %}"></script>
-    <!--<script type="text/javascript" src="{% static 'EscalArt/js/menu.js' %}"></script>-->
 
     <!--Diseño Perfi-->
     <section class="seccion-perfil-usuario">
@@ -57,27 +56,17 @@
                     <img src="/{{la.imagen}}" class="foto_perfil" alt=""> {% else %}
                     <img src="{% static 'EscalArt/img/perfil.jpg' %}" class="foto_perfil" alt=""> {% endif %}
 
-                    <!-- formulario para editar foto de perfil -->
 
                     <!-- 16 Fin if para verificar user conectado -->
                     {% endif %}
                     <!-- 15 Fin for para cambiar foto perfil -->
-                    {% endfor %}
-
-                    <!-- <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt=""> -->
-                    {% if list.idUser == user.idUser %}
+                    {% endfor %} {% if list.idUser == user.idUser %}
 
                     <form action="" method="post" enctype="multipart/form-data">
                         {% csrf_token %} {{foto.as_hidden}} <input type="file" id="real-file2" name="pfp" hidden="hidden">
                         <button type="button" class="boton-avatar" id="custom-button2" onclick="MostrarAlerta();">
                             <i class="far fa-image"></i>
                         </button>
-
-                        <!-- <div style="width: 100%;height:50px;background-color:white;position:absolute;left:5%;display: none;" id="AlertaOk">
-                            <button onclick="OcultarAlerta();" class="btn-Editar-Bio btnPfp" type="submit" name="fotoPerfil">Aceptar</button>
-                            <button onclick="OcultarAlerta();" class="btnPfp" style="margin-left: 5%;">Cancelar </button>
-
-                        </div> -->
                     </form>
                     {%endif%}
                 </div>
@@ -89,11 +78,6 @@
                         <i class="far fa-image"></i> Cambiar fondo
                     </button>
 
-                    <!-- <div id="AlertaOk2">
-                        <button onclick="OcultarAlerta2();" class="btn-Editar-Bio btnHeader" type="submit" name="EditHeader">Aceptar</button>
-                        <button onclick="OcultarAlerta2();" class="btnHeader" style="margin-left: 5%;">Cancelar </button>
-
-                    </div> -->
 
                 </form>
                 {%endif%}
@@ -169,15 +153,11 @@
                     <!-- 15 Fin for para cambiar foto perfil -->
                     {% endfor %} {{form.as_hidden}}
 
-                    <!-- <span id="custom-text"></span> -->
 
-                    <!-- <a href="" id="browse"><img src="{% static 'EscalArt/img/perfil.jpg' %}" alt=""></a> -->
-                    <!-- <img src="{% static 'EscalArt/img/perfil.jpg' %}" alt=""> -->
                     <input class="bio-centro" type="submit" name="fotoPerfil" value="Editar Foto"><br><br><br>
                     <div class="form-group">
 
                         <label>Biografia: </label> {{edit.biografia}}
-                        <!-- <textarea placeholder="Editar..." required type=""></textarea> -->
                     </div>
                     <div class="bio-bottom">
                         <input type="submit" name="editar" value="Enviar">
@@ -338,7 +318,7 @@
                     <i class="fa-solid fa-face-smile"></i> {{ form.titulo }} {{form.descripcion}}{{form.cantLikes.as_hidden}}
                 </div>
                 <div class="publicacion-bottom">
-                    <!-- <img src="{% static 'EscalArt/img/fondo-ayuda.jpg' %}" alt=""> -->
+
                     <!-- send help -->
                     {{form.imagen.as_hidden}}
                     <input type="file" id="real-file2" name="pfp" hidden="hidden">
@@ -364,25 +344,9 @@
 
         <section id="galeria">
             {% for p in posts %} {% if list.idUser == p.idUser.idUser %}
-            <!-- <form action="" id="post-form" method="POST">
-                {% csrf_token %}
-                <input style="display: none;" type="text" name="idPost" id="idPost" value="{{p.idPublicacion}}">
-                <button type="submit" name="publicacion" id="publicacion">
 
-                <img src="{{ p.imagen }}" alt="Galeria de imagenes" >
-                </button>
-
-
-            </form> -->
             <a href="#" name="idPost" id="idPost"><img src="/{{ p.imagen }}" alt="Galeria de imagenes" onclick="AbrirPubli();"></a> {% endif %} {% endfor %}
 
-
-            <!-- {{p.titulo}} {{p.descripcion}} -->
-            <!-- <img src="{% static 'EscalArt/img/foto_2.jpg' %}" alt="Galeria de imagenes">
-            <img src="{% static 'EscalArt/img/foto_3.jpg' %}" alt="Galeria de imagenes">
-            <img src="{% static 'EscalArt/img/foto_4.jpg' %}" alt="Galeria de imagenes">
-            <img src="{% static 'EscalArt/img/foto_5.jpg' %}" alt="Galeria de imagenes">
-            <img src="{% static 'EscalArt/img/foto_6.jpg' %}" alt="Galeria de imagenes"> -->
 
 
         </section>
@@ -417,6 +381,19 @@
                                 <li><i class="fa-solid fa-heart corazon"></i>{{publi.cantLikes}}</li>
                                 <li><i class="fa-solid fa-comment-dots comentar"></i>Comentar</li>
                                 <li><i class="fa-solid fa-share compartir"></i>Compartir</li>
+                                <li><button onclick="MostrarOpciones();"><i class="fa-solid fa-ellipsis post-settings"></i></button></li>
+                            </ul>
+                        </div>
+                        <div id="settings-post">
+                            <ul class="Configuracion-post">
+                                <li>
+                                    <form action="" method="POST">
+                                        {% csrf_token %} {{guardarPost.as_hidden}}
+                                        <input hidden="hidden" type="text" value="{{publi.idPublicacion}}" name="idPost">
+                                        <button method="submit" name="guardarPost"><i class="fa-solid fa-bookmark"></i></input>Guardar</li></button>
+                                    </form>
+                                    <li><i class="fa-solid fa-flag"></i>Reportar</li>
+                                    <span class="linea_2"></span>
                             </ul>
                         </div>
                         <span></span>
@@ -471,5 +448,55 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- scrip publicacion -->
+<script src="{% static 'EscalArt/js/publicacion.js' %}"></script>
 
 </html>
+
+<style>
+    .column {
+        float: left;
+    }
+    
+    #settings-post {
+        position: absolute;
+        width: 210px;
+        height: 216px;
+        background-color: rgba(255, 255, 255, 0.779);
+        z-index: 40;
+        display: none;
+        border-radius: 20px;
+        right: 125px;
+        box-shadow: 2px solid #000;
+        border: 1px solid #86C332;
+    }
+    
+    .Configuracion-post {
+        margin: 10px;
+        list-style: none;
+    }
+    
+    #settings-post .Configuracion-post li i {
+        font-size: 45px;
+        padding: 10px;
+    }
+    
+    #settings-post .Configuracion-post li a {
+        text-decoration: none;
+    }
+    
+    #settings-post .Configuracion-post span {
+        height: 2px;
+        width: 100%;
+        color: #659523;
+    }
+    
+    .settings-container {
+        position: relative;
+        margin: 0px 100px 80px 0px;
+    }
+    
+    .post-settings {
+        font-size: 25px;
+    }
+</style>
