--- a/EscalArt/templates/escalArt/index.html
+++ b/EscalArt/templates/escalArt/index.html
@@ -80,7 +80,7 @@
                 <P class="descripcion-post " id="descripcion-post">{{p.descripcion}}</P>
                 <div>
                     <span class="post-likes column"><i class="fa-solid fa-heart corazon"></i></span>
-                    <span class="post-likes column" id="cant-likes">{{p.cantLikes}}</span>
+                    <span class="post-likes column" id="cant-likes">0</span>
 
                 </div>
             </div>
