--- a/EscalArt/templates/escalArt/publicacion.html
+++ b/EscalArt/templates/escalArt/publicacion.html
@@ -113,8 +113,8 @@
 
 
                     {% if list.idUser == perfil.idUser.idUser %}
-                    <li class="lista-li">{{perfil.seguidos}} Siguiendo</li>
-                    <li class="lista-li">{{perfil.seguidores}} Seguidores</li>
+                    <li class="lista-li">0 Siguiendo</li>
+                    <li class="lista-li">{{perfil.seguidores.all.count}} Seguidores</li>
                     <button id="Boton" onclick="mostrar();"><li  class="lista-li" >{{perfil.calificacion}}</li></button>
                     <!-- 6 FIN if para identificar perfil segun user -->
                     {% endif %}
@@ -378,7 +378,25 @@
                         <span></span>
                         <div class="ver-publi-lista">
                             <ul>
-                                <li><i class="fa-solid fa-heart corazon"></i>0</li>
+                                <li style="padding-right:0px;">
+                                    {% if user.is_authenticated %}
+                                    <form class="post-likes column" method="post" action="{% url 'like' publi.idPublicacion %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="next" value="{{request.path}}">
+                                        <button style="background-color:transparent; border:none;box-shadow:none;" type="submit"><i class="fa-solid fa-heart corazon">{{publi.cantLikes.all.count}} </i></button>
+
+                                    </form>
+                                    {% comment %} <span class="post-likes column"></span> {% endcomment %} {%else%}
+                                    <form>
+                                        <span style="background-color:transparent" class="post-likes column">
+                                            <i class="fa-solid fa-heart corazon">
+                                                {{publi.cantLikes.all.count}}
+                                            </i>
+                                        </span>
+                                    </form>
+
+                                    {%endif%}
+                                </li>
                                 <li><i class="fa-solid fa-comment-dots comentar"></i>Comentar</li>
                                 <li><i class="fa-solid fa-share compartir"></i>Compartir</li>
                                 <li><button onclick="MostrarOpciones();"><i class="fa-solid fa-ellipsis post-settings"></i></button></li>
