--- a/EscalArt/static/escalArt/css/Menu-Fotter.css
+++ b/EscalArt/static/escalArt/css/Menu-Fotter.css
@@ -123,7 +123,7 @@ header {
 }
 
 .menu li a:hover {
-    padding: 5px 10px;
+    padding: 3px;
     background: #86C332;
     color: #000;
     border-radius: 15px;
@@ -193,6 +193,7 @@ header {
 .pie-pagina {
     width: 100%;
     background-color: #12130F;
+    bottom: 0;
 }
 
 .pie-pagina .grupo-1 {
