--- a/EscalArt/templates/registration/login.html
+++ b/EscalArt/templates/registration/login.html
@@ -30,7 +30,7 @@
             </div>
             <ul class="menu">
                 <li><a href="{% url 'home' %}"><i class="fa-solid fa-house-chimney"></i></a></li>
-                <li><a href="#"><i class="fa-solid fa-comment-dots"></i></a></li>
+                <li><a href=""><i class="fa-solid fa-comment-dots"></i></a></li>
                 <li><a href="#"><i class="fa-solid fa-question"></i></a></li>
                 <li><a href="{% url 'perfil' %}"><i class="fa-solid fa-circle-user"></i></a></li>
             </ul>
